keep search endpoint warm and fix ugly chrome scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,7 @@ body {
   overflow-x: hidden;
   margin: 0 !important;
 }
+
+.resultTable::-webkit-scrollbar {
+  display: none;
+}
